# RS_codes

./: README.md
DNA_RS_Codes/: Makefile
DNA_RS_Codes/include/: dna_rs_decoder.hpp  dna_rs_encoder.hpp  dna_utils.hpp  schifra_crc.hpp  schifra_ecc_traits.hpp  schifra_erasure_channel.hpp  schifra_error_processes.hpp  schifra_fileio.hpp  schifra_galois_field.hpp  schifra_galois_field_element.hpp  schifra_galois_field_polynomial.hpp  schifra_galois_utilities.hpp  schifra_reed_solomon_bitio.hpp  schifra_reed_solomon_block.hpp  schifra_reed_solomon_codec_validator.hpp  schifra_reed_solomon_decoder.hpp  schifra_reed_solomon_encoder.hpp  schifra_reed_solomon_file_decoder.hpp  schifra_reed_solomon_file_encoder.hpp  schifra_reed_solomon_file_interleaver.hpp  schifra_reed_solomon_general_codec.hpp  schifra_reed_solomon_interleaving.hpp  schifra_reed_solomon_product_code.hpp  schifra_reed_solomon_speed_evaluator.hpp  schifra_reed_solomon_util.hpp  schifra_sequential_root_generator_polynomial_creator.hpp  schifra_utilities.hpp
DNA_RS_Codes/src/: dna_rs_decoder.cpp  dna_rs_encoder.cpp  dna_rs_example.cpp  dna_utils.cpp
Parallel_RS_codes_for_DNAStorage_schifra/: CMakeLists.txt
Parallel_RS_codes_for_DNAStorage_schifra/cmake/: schifra-config.cmake.in
Parallel_RS_codes_for_DNAStorage_schifra/examples/advanced/: schifra_reed_solomon_example09.cpp
Parallel_RS_codes_for_DNAStorage_schifra/examples/basic/: schifra_reed_solomon_example04.cpp
Parallel_RS_codes_for_DNAStorage_schifra/examples/dna_storage/: large_dna_test.cpp  schifra_dna_storage_example.cpp  test_dna_storage  test_dna_storage_parallel.cpp
Parallel_RS_codes_for_DNAStorage_schifra/examples/file_operations/: schifra_reed_solomon_file_interleaving_example.cpp
Parallel_RS_codes_for_DNAStorage_schifra/include/schifra/: dna_storage.hpp  schifra.hpp
Parallel_RS_codes_for_DNAStorage_schifra/include/schifra/core/galois_field/: polynomial.hpp  schifra_galois_utilities.hpp
Parallel_RS_codes_for_DNAStorage_schifra/include/schifra/reed_solomon/: schifra_reed_solomon_decoder.hpp  schifra_reed_solomon_encoder.hpp  schifra_reed_solomon_general_codec.hpp
Parallel_RS_codes_for_DNAStorage_schifra/include/schifra/utils/: schifra_fileio.hpp
Parallel_RS_codes_for_DNAStorage_schifra/src/: dna_storage_cuda.cu
RSCodes_for_DNAStorage/: README.md  corrected_dna.txt  dna_rs_decoder.py  dna_rs_encoder.py  dna_utils.py  example.py  large_dna_example.py  large_example.py  performance_benchmark.py  performance_benchmark2.py
RSCodes_for_DNAStorage/core/: __init__.py  exceptions.py  gf_math.py  reed_solomon.py
RSCodes_for_DNAStorage/docs/: dna_corrected6.txt  dna_corrupted6.txt  dna_encoded6.txt  dna_input6.txt
RSCodes_for_DNAStorage/output/: original_dna.txt
RS_codes_for_DNAStorage(c++ schifra)/: update_header_includes.sh
RS_codes_for_DNAStorage(c++ schifra)/cmake/: schifra-config.cmake
RS_codes_for_DNAStorage(c++ schifra)/examples/advanced/: CMakeLists.txt
RS_codes_for_DNAStorage(c++ schifra)/examples/basic/: CMakeLists.txt  schifra_reed_solomon_example01.cpp  schifra_reed_solomon_example02.cpp  schifra_reed_solomon_example03.cpp  schifra_reed_solomon_example08.cpp
RS_codes_for_DNAStorage(c++ schifra)/examples/file_operations/: schifra_reed_solomon_file_encoding_example.cpp
RS_codes_for_DNAStorage(c++ schifra)/include/schifra/: dna_storage.hpp
RS_codes_for_DNAStorage(c++ schifra)/include/schifra/core/galois_field/: element.hpp
RS_codes_for_DNAStorage(c++ schifra)/include/schifra/reed_solomon/: schifra_reed_solomon_file_encoder.hpp  schifra_reed_solomon_file_interleaver.hpp  schifra_sequential_root_generator_polynomial_creator.hpp
RS_codes_for_DNAStorage_schifra/: CMakeLists.txt  README.md  update_includes.sh
RS_codes_for_DNAStorage_schifra/Benchmark_results/: README.md  encoding_decoding_time.py  error_correction_rate_vs_errorsPerBlock.py  processingtime_vs_threadcount.py  throughput_vs_sequence_length.py  throughput_vs_thread_count.py
RS_codes_for_DNAStorage_schifra/examples/: CMakeLists.txt
RS_codes_for_DNAStorage_schifra/examples/advanced/: schifra_reed_solomon_example05.cpp  schifra_reed_solomon_example06.cpp  schifra_reed_solomon_example07.cpp
RS_codes_for_DNAStorage_schifra/examples/dna_storage/: 4threads_parallel_sequence_benchmark_results.py  CMakeLists.txt  benchmark_dna_storage.cpp  dna_benchmark  dna_large_data_test  dna_large_data_test.cpp  optimized_parallel_sequence_comparision.cpp  parallel_dna_data_test.cpp  parallel_dna_test  parallel_sequence_benchmark.cpp  parallel_sequence_benchmark2.cpp  parallel_sequence_comparison  parallel_sequence_comparison.cpp  plot_multi_benchmark.py  schifra_dna_storage_example.cpp  test_dna_storage  test_dna_storage.cpp
RS_codes_for_DNAStorage_schifra/examples/file_operations/: CMakeLists.txt  schifra_reed_solomon_file_decoding_example.cpp
RS_codes_for_DNAStorage_schifra/include/schifra/reed_solomon/: schifra_reed_solomon_block.hpp  schifra_reed_solomon_decoder.hpp  schifra_reed_solomon_file_decoder.hpp  schifra_reed_solomon_interleaving.hpp
RS_codes_for_DNAStorage_schifra/include/schifra/utils/: schifra_error_processes.hpp
RS_codes_for_DNAStorage_schifra/src/: dna_storage.cpp
RS_codes_main/: RS_codes.py  decode.py  encode.py  gf_operations.py  init_tables.py  main.py  rs_codes.py
